[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
aws-lc-rs = ["quinn-proto/aws-lc-rs"]
# rustls-ring = ["dep:rustls", "ring", "proto/rustls-ring", "proto/ring"]

[dependencies]
anyhow = "1.0.100"
aws-lc-rs = "1.15.2"
quinn = "0.11.9"
quinn-proto = "0.11.13"
rcgen = "0.14.6"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
