[package]
name = "server"
version = "0.1.0"
edition = "2024"

[features]
aws-lc-rs = ["quinn-proto/aws-lc-rs"]
# rustls-ring = ["dep:rustls", "ring", "proto/rustls-ring", "proto/ring"]

[dependencies]
anyhow = "1.0.100"
aws-lc-rs = "1.15.2"
num-derive = "0.4.2"
num_enum = "0.7.5"
quinn = "0.11.9"
quinn-proto = "0.11.13"
rcgen = "0.14.6"
rmp = "0.8.15"
rmp-serde = "1.3.1"
rustls = "0.23.35"
rustls-pemfile = "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
slotmap = "1.1.1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
